Version: 1.3.0
Date: 2025-07-18
  Changes:
    - renamed mod to `AbandonedRuins_updated_fork` done by @Keysivi
    - removed base ruins (duplicated to mod `AbandonedRuins-base`)
    - further rewrites towards `AbandonedRuins_updated_fork` mod
    - excluded my old mod's name
    - added asserts on surface.valid (should always be?)
---------------------------------------------------------------------------------------------------
Version: 1.2.13
Date: 2025-07-18
  Changes:
    - excluded `AbandonedRuins_updated_fork` as they both does the same
---------------------------------------------------------------------------------------------------
Version: 1.2.12
Date: 2025-07-18
  Changes:
    - renamed `spawn_table` to `spawn_chances` as tables are tables already and
      `spawn_chances` is more descriptive
    - added some more assertitions
    - added some minor debug lines
---------------------------------------------------------------------------------------------------
Version: 1.2.11
Date: 2025-06-07
  Fixed:
    - had to rename `stack-inserter` to `bulk-inserter` (thanks to @Dogman15 for reporting this)
---------------------------------------------------------------------------------------------------
Version: 1.2.10
Date: 2025-04-26
  Fixes:
    - Parameter `size` was wrongfully documented as `number` must be `string`
---------------------------------------------------------------------------------------------------
Version: 1.2.9
Date: 2025-04-19
  Changes:
    - The event `on_tick` did generate to many useless messages, it is now separated from
      usual debug purposes (EXTREMELY RARE USED!)
---------------------------------------------------------------------------------------------------
Version: 1.2.8
Date: 2025-04-18
  Fixes:
    - Possible fix for spawning ruins on heavy oil (Fulgora) or lava (Vulcanus)
      or anything not ground without using hard-coded planet names
    - the goal here is to allow Nauvis-like (water-based oceans) planets to have