@@ -1,5 +1,3 @@
-debug_log = settings.global["ruins-enable-debug-log"].value
-
 local parsing = {}
 
 -- extend table 1 with table 2
@@ -8,6 +6,7 @@ local parsing = {}
 ---@param table2 table
 local function extend(table1, table2)
   for key, value in pairs(table2) do
+    log(string.format("key='%s',value[]='%s'", key, type(value)))
     table1[key] = value
   end
 end
@@ -61,11 +60,22 @@ extend(entity_expressions, common_expressions)
 ---@param vars VariableValues
 ---@return number
 parsing.number = function(t, vars)
+  if debug_log then log(string.format("[number]: t[]='%s',vars[]='%s' - CALLED!", type(t), type(vars))) end
   if type(t) == "table" then
-    local ret = number_expressions[t.type](t, vars) or error("Unrecognized number-expression type: " .. t.type)
+    if debug_log then log(string.format("[number]: Parsing t.type='%s',t.name='%s' ...", t.type, t.name)) end
+    if number_expressions[t.type] == "nil" then
+      error("Unrecognized number-expression type: " .. t.type)
+    end
+
+    local ret = number_expressions[t.type](t, vars)
+
+    if debug_log then log(string.format("[number]: ret[]='%s'", type(ret))) end
     assert(type(ret) == "number", "String expression did not return a number. Expression was " .. serpent.line(t))
+
+    if debug_log then log(string.format("[number]: ret=%.2f - EXIT!", ret)) end
     return ret
   elseif type(t) == "number" then
+    if debug_log then log(string.format("[number]: t=%.2f - EXIT!", t)) end
     return t
   end
   error("Received something that is not a number or table as number-expression")
@@ -75,14 +85,25 @@ end
 ---@param vars VariableValues
 ---@return string
 parsing.entity = function(t, vars)
+  if debug_log then log(string.format("[entity]: t[]='%s',vars[]='%s' - CALLED!", type(t), type(vars))) end
   if type(t) == "table" then
-    local ret = entity_expressions[t.type](t, vars) or error("Unrecognized entity-expression type: " .. t.type)
+    if debug_log then log(string.format("[entity]: Parsing t.type='%s',t.name='%s' ...", t.type, t.name)) end
+    if entity_expressions[t.type] == "nil" then
+      error("Unrecognized entity-expression type: " .. t.type)
+    end
+
+    local ret = entity_expressions[t.type](t, vars)
+
+    if debug_log then log(string.format("[entity]: ret[]='%s'", type(ret))) end
     assert(type(ret) == "string", "Entity expression did not return a string. Expression was " .. serpent.line(t))
+
+    if debug_log then log(string.format("[entity]: ret='%s' - EXIT!", ret)) end
     return ret
   elseif type(t) == "string" then
+    if debug_log then log(string.format("[entity]: t='%s' - EXIT!", t)) end
     return t
   end
-  error("Received something that is not a number or table as entity-expression")
+  error("Received something that is not an entity or table as entity-expression")
 end
 
 return parsing
