@@ -7,6 +7,7 @@ Date: 2025-07-18
     - further rewrites towards `AbandonedRuins_updated_fork` mod
     - excluded my old mod's name
     - added asserts on surface.valid (should always be?)
+    - added more debug lines
 ---------------------------------------------------------------------------------------------------
 Version: 1.2.13
 Date: 2025-07-18
